# cuba-memorys

./: .env.example  .gitignore  .npmignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  package.json  pyproject.toml  server.json  setup_db.sh  sonar-project.properties
.cargo/: config.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: announce.py  linkedin_setup.py  reddit_setup.py
.github/workflows/: announce.yml  ci.yml  publish.yml
.grok/: config.toml
docs/: DISENO.md  PLAN-IMPLEMENTACION-COMPLETA.md  PLAN-MEJORAS-v0.11.md
npm/: bin.js  install.test.js  postinstall.js
rust/: .dockerignore  .gitignore  Cargo.toml  README.md  deny.toml
rust/.cargo/: audit.toml
rust/eval-datasets/: smoke.jsonl
rust/examples/: bench_handlers.rs
rust/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_episodes.down.sql  0002_episodes.up.sql  0003_obs_updated_at.down.sql  0003_obs_updated_at.up.sql  0004_bcm_theta.down.sql  0004_bcm_theta.up.sql  0005_triggers.down.sql  0005_triggers.up.sql  0006_verify_log.down.sql  0006_verify_log.up.sql  0007_embedding_model.down.sql  0007_embedding_model.up.sql  0008_session_provenance.down.sql  0008_session_provenance.up.sql  0009_tags.down.sql  0009_tags.up.sql  0010_project_scoping.down.sql  0010_project_scoping.up.sql  0011_compaction_snapshots.down.sql  0011_compaction_snapshots.up.sql  0012_sync_state.down.sql  0012_sync_state.up.sql  0013_judgments.down.sql  0013_judgments.up.sql  0014_source_trust.down.sql  0014_source_trust.up.sql  0015_working_memory.down.sql  0015_working_memory.up.sql  0016_audit_log.down.sql  0016_audit_log.up.sql  0017_rls_policies.down.sql  0017_rls_policies.up.sql  0018_bitemporal_core.down.sql  0018_bitemporal_core.up.sql  0019_entity_linking.down.sql  0019_entity_linking.up.sql  0020_memory_layers.down.sql  0020_memory_layers.up.sql  (+30 more)
rust/scripts/: download_model.sh  download_nli.sh  migrate_v3.sql
rust/src/: calibrate_cli.rs  cli.rs  codegraph_cli.rs  constants.rs  dashboard.rs  db.rs  dedupe_cli.rs  doctor.rs  export.rs  gpu.rs  hooks_cli.rs  lib.rs  link_cli.rs  main.rs  mode.rs  models_cli.rs  observability.rs  project.rs  protocol.rs  recall_cli.rs  reembed_cli.rs  schema.sql  secure_cli.rs  session.rs  setup.rs  setup_agent.rs  skills_cli.rs  sync_cli.rs  tasks.rs
rust/src/codegraph/: mod.rs  python_lang.rs  rust_lang.rs
rust/src/cognitive/: adwin.rs  allen.rs  calibration.rs  density.rs  dual_strength.rs  fsrs.rs  hebbian.rs  judge.rs  memory_op.rs  mi_tagging.rs  mod.rs  nli.rs  prediction_error.rs  spreading.rs
rust/src/core/: bitemporal.rs  entity_linking.rs  mod.rs  temporal_query.rs
rust/src/embeddings/: onnx.rs
rust/src/eval/: datasets.rs  harness.rs  metrics.rs  mod.rs  reporters.rs
rust/src/graph/: activation.rs  autolink.rs  centrality.rs  closeness.rs  community.rs  energy.rs  kcore.rs  mod.rs  pagerank.rs
rust/src/handlers/: alarma.rs  alma.rs  archivo.rs  calibrar.rs  centinela.rs  contradiccion.rs  cronica.rs  decreto.rs  docs.rs  eco.rs  expediente.rs  faro.rs  forget.rs  hipotesis.rs  ingesta.rs  jornada.rs  juez.rs  mod.rs  pizarra.rs  pre_compact.rs  proyecto.rs  puente.rs  receta.rs  reflexion.rs  remedio.rs  sync.rs  tools.rs  vigia.rs  zafra.rs
rust/src/net/: fetch.rs  guard.rs  mod.rs
rust/src/search/: bm25.rs  budget.rs  cache.rs  calibrate.rs  confidence.rs  mmr.rs  mod.rs  ood.rs  ood_cache.rs  rerank.rs  rrf.rs
rust/src/sync/: cas.rs  chunk.rs  compressor.rs  mod.rs  paths.rs  transport.rs
rust/tests/: cli_contract.rs  e2e_all_tools.py  integration.rs  nli_cost.rs  nli_entailment.rs  nli_probe.rs  smoke_test.rs  v08_project_scoping.rs  v09_integration.rs
rust/tests/datasets/: brain_qa_es.jsonl  longmemeval_abilities_es.jsonl
sandbox/: .prod-baseline  down.sh  env.sh  mcp_call.py  reset.sh  up.sh  verify-prod-intact.sh
scripts/: backup-db.sh  create-app-role.sql  demo.sh  enable-rls.sql  gen-eval-dataset.py  mcp_live_session_test.py  merge-gate.sh  migrate-embedding-dim.sh  record-demo-gif.sh  restore-db.sh  run-all-tests.sh
src/cuba_memorys/: __main__.py  constants.py  db.py  embeddings.py  handlers.py  hebbian.py  protocol.py  schema.sql  search.py  server.py  tfidf.py
