[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "cuba-memorys"
version = "1.12.0"
description = "Persistent memory MCP server for AI agents (v0.10). 25 tools: bitemporal facts, sqlx-migrate, BM25+MMR+OOD hybrid retrieval, graph metrics, conformal prediction, Hebbian/BCM, project scoping, CFR-21 audit chain. Rust + PostgreSQL + pgvector."
readme = "README.md"
license = { text = "CC-BY-NC-4.0" }
requires-python = ">=3.9"
keywords = [
    "mcp",
    "memory",
    "knowledge-graph",
    "hebbian",
    "ai-agent",
    "anti-hallucination",
    "pagerank",
    "model-context-protocol",
]
classifiers = [
    "Programming Language :: Rust",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[tool.maturin]
bindings = "bin"
manifest-path = "rust/Cargo.toml"
strip = true
