[package]
name = "cuba-memorys"
version = "0.6.0"
edition = "2024"
description = "Knowledge Graph MCP Server — 19 tools, Hebbian learning, RRF fusion, contradiction detection, prospective memory, Bayesian calibration"
license = "CC-BY-NC-4.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL (compile-time checked, async, built-in pool retry)
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Embeddings (ONNX Runtime) — pinned RC (ADR audit 2026-03-14)
# IMPORTANT: =exact pin until ort 2.0.0 stable releases. Do NOT change.
# tls-native-vendored: statically compiles OpenSSL from source — eliminates
# system OpenSSL dependency that breaks ARM64 cross-compilation in CI.
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic", "tls-native-vendored"] }
tokenizers = "0.21"

# Logging (structured, to stderr)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
anyhow = "1"
# NOTE: thiserror removed — zero callers found across all 37 source files (dead dep).
# NOTE: petgraph removed — zero imports found (dead dep; graph algos use own impl).
# NOTE: rand removed — zero imports found (dead dep).

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Cache (O(1) LRU eviction)
# RUSTSEC-2026-0002: lru 0.12.5 has unsound IterMut. We only call .iter() (safe).
# Update to 0.12.6+ once released, or replace with quick_cache if vuln is critical.
lru = "0.12"

# Global allocator
mimalloc = "0.1"

# Hashing (relation dedup — E-WL inspired triple hash)
blake3 = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# CL-001: suppress unexpected_cfg warning for kani formal verification annotations
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
