[package]
name = "cuba-memorys"
version = "0.13.1"
edition = "2024"
description = "Knowledge Graph MCP Server — 25 tools, sqlx-migrate, BM25/MMR/OOD search, conformal prediction, testing-effect/Δt-Hebbian/Robbins-Monro cognitive, source credibility, closeness/harmonic/k-core graph, working-memory + Allen interval + ADWIN drift + MI tagging, audit hash-chain (CFR-21) + RLS, MCP Resources URI scheme, optional Prometheus /metrics + MCPSamplingJudge, plus v0.8 features (project scoping, snapshots, sync, LLM-judge)"
license = "AGPL-3.0-only"

[dependencies]
half = "2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
pgvector = { version = "0.4", features = ["sqlx"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

ort = { version = "=2.0.0-rc.12", features = ["load-dynamic", "tls-native-vendored", "half"] }
tokenizers = "0.21"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

anyhow = "1"

async-trait = "0.1"

tiktoken-rs = "0.7"

nalgebra = { version = "0.33", default-features = false, features = ["std"] }

sha2 = "0.10"
hex = "0.4"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

lru = "0.12"

zstd = "0.13"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

url = { version = "2", optional = true }
html2text = { version = "0.12", optional = true }

metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"], optional = true }

mimalloc = "0.1"

[features]
default = []
bitemporal = []
graph-energy = []
eval-benchmarks = []
anthropic-api = []
cuda = ["ort/cuda"]
directml = ["ort/directml"]
docs = ["dep:url", "dep:html2text"]
observability = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.quick]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
debug = false
strip = true
